fixing the overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,7 @@ body {
 }
 
 
-@media(max-width: 600px) {
+@media(max-width: 660px) {
     body {
         grid-template-columns: 20px auto 20px;
         grid-template-areas: ". header ."
@@ -800,7 +800,7 @@ body[data-kb-typing-state="1"][data-kb-state="2"] footer {
     }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 760px) {
     #config-toolbar-container {
         margin-top: 30px;
         padding: 0 10px;
@@ -1083,7 +1083,7 @@ body[data-kb-typing-state="1"][data-kb-state="2"] footer {
 }
 
 /* Responsive design for footer */
-@media (max-width: 768px) {
+@media (max-width: 910px) {
     .footer-content {
         flex-direction: column;
         gap: 20px;
